# software-eng

./: CMakeLists.txt  README.md  codegenerator.c  codegenerator.h  example.txt  infix2postfix.c  infix2postfix.h  main.c  test.c  tokeniser.c  tokenizer.c  tokenizer.h  virtualmachine.c  virtualmachine.h
calc/: Makefile  README.md  codegenerator.h  i2ptest.c  infix2postfix.c  infix2postfix.h  main.c  test.c  tokenizer.c  tokenizer.h  virtualmachine.c  virtualmachine.h
calc/temp/: input.txt  instructions.txt  postfix.txt  tokenizer.txt
jjjj/: Makefile  README.md  codegenerator.c  infix2postfix.c  infix2postfix.h  main.c  maintest  tokenizer.c  tokenizer.h  virtualmachine.c
jjjj/temp/: input.txt  instructions.txt  postfix.txt  tokenizer.txt
